<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_help_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/view_help_text_1"
                android:textColor="@color/green"
                />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="197dp"
                app:srcCompat="@drawable/view_help_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/view_help_text_2"
                android:textColor="@color/green"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="79dp"
                app:srcCompat="@drawable/view_help_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="@string/view_help_text_3" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="163dp"
                app:srcCompat="@drawable/view_help_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/green"
                android:text="@string/view_help_text_4" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>